[package]
name = "project-ch-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.0"
sha2 = "0.10.6"
log = "0.4.17"
pretty_env_logger = "0.4.0"

[dev-dependencies]
testing_logger = "0.1.1"
